# DonaldTrumpNumber1

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: config.py
app/bot/: __init__.py  events.py  music.py
app/bot/tools/: llm.py
