[project]
name = "openbot"
version = "0.1.0"
description = "Discord bot with AI chat and music playback"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "davey>=0.1.4",
    "discord-py>=2.7.1",
    "openai>=2.28.0",
    "pydantic-settings>=2.13.1",
    "pynacl>=1.6.2",
    "ruff>=0.15.6",
    "yt-dlp>=2026.3.13",
]
